2016-08-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.1-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.1-beta01 final changes';git push
	git tag -a 4.6.1-beta01 -m 'Version 4.6.1-beta01 new features: ncremap crv, constance, nco_fl_mv(), cnk';git push --tags

	* ncremap: give-up on confirming overwriting existing maps until it works in interactive shells only

	* Use different output dimensions bounds names for mappings to curvilinear axes
	Default is now to use temporal bounds name for spatial bounds for rectangular grids,
	and to use "nvertices" for spatial bounds on 1D and curvilinear grids.

2016-08-03  Charlie Zender  <zender@uci.edu>

	* ncclimo: merge Balwinder's changes for Constance at PNNL

	* Only write lat_wgt attributes when flg_grd_out_rct is true

	* Write lat/lon_crn not lat/lon_bnd data when map is curvilinear

	* Improve documentation for chunking with LFP and using ncra subcyles and MRO

2016-08-02  Charlie Zender  <zender@uci.edu>

	* Fix nco_grd_nfr(): use nco_inq_varid() not nco_inq_dimid() to	find coordinates

	* Relax failed return code diagnosis for nco_fl_mv(), fail when rcd != 0

2016-08-01  Charlie Zender  <zender@uci.edu>

	* Clarify which size options are in bytes and which are in elements, especially for chunking

2016-07-31  Charlie Zender  <zender@uci.edu>

	* Deduce script and NCO paths using stackoverflox method borrowed from terraref.sh

2016-07-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.1-alpha03 final changes';git push
	git tag -a 4.6.1-alpha03 -m 'Version 4.6.1-alpha03 new features: fix hyperactive incremental mode, ncatted special characters, chunking docs';git push --tags

	* Prevent ncclimo from attempting to generate incremental climos when yr_srt_prv not supplied

2016-07-26  Charlie Zender  <zender@uci.edu>

	* Allow special characters in ncatted names. Fixes TODO nco1130 reported by emontgomery 20160726.
