@@ -70,7 +70,7 @@ Try to disable Spammers' machines:
 <p><h1 align="center">Bienvenue sur le netCDF Operator (NCO) site</h1>
 
 <p><h2>
-Current stable NCO version is 4.6.0 released <!--#flastmod file="src/nco-4.6.0.tar.gz"-->
+Current stable NCO version is 4.6.1 released <!--#flastmod file="src/nco-4.6.1.tar.gz"-->
 </h2>
 
 <table border=0 width=100%>
@@ -149,8 +149,8 @@ and
 <h2>Recent Releases &amp; Milestones</h2>
 
 <ul>
-<!-- <li>2016 Jul&nbsp;??: 4.6.2 (<i>In progress</i>) -->
-<li>2016 Aug&nbsp;??: 4.6.1 (<i>In progress</i>)
+<li>2016 Sep&nbsp;??: 4.6.2 (<i>In progress</i>) -->
+<li>2016 Aug&nbsp;06: 4.6.1 (Stability)
 <li>2016 Jul&nbsp;06: Submitted Layer-packing <a href="http://www.geosci-model-dev-discuss.net/gmd-2016-177">Manuscript</a> to <i>Geosci. Model Dev. Discuss.</i></li>
 <li>2016 May&nbsp;12: 4.6.0 (<tt>ncclimo</tt>)
 <li>2016 Apr&nbsp;06: <a href="http://dust.ess.uci.edu/smn/pst_nco_esds_201604.pdf">Poster</a> at NASA ESDSWG, Greenbelt</li>
@@ -611,7 +611,7 @@ Identical copies of those tarballs are also stored
 <a href="http://nco.sf.net/src">here</a> on SourceForge for historical
 continuity.
 You may retrieve the source of tagged versions directly with, e.g.,
-<tt>git clone -b 4.6.0 http://github.com/nco/nco.git nco-4.6.0</tt></a>.
+<tt>git clone -b 4.6.1 http://github.com/nco/nco.git nco-4.6.1</tt></a>.
 <ul>
 <li><b>NCO 4.6.2</b>: (<i>Future</i>) 
 <tt>ncks</tt> prints human-legible ISO8601 dates;
@@ -761,7 +761,7 @@ goodies besides NCO) to your automatically-searched channels with
 &lsquo;<tt>conda config --add channels --conda-forge</tt>&rsquo;, then
 install NCO with &lsquo;<tt>conda install nco</tt>&rsquo;.
 The default NCO installed by <tt>conda</tt> is generally within a month of the latest release. 
-<li><a href="https://github.com/conda-forge/nco-feedstock">nco-4.6.0</a> Executables Anaconda-compatible. Maintained by Filipe Fernandes.</li>
+<li><a href="https://github.com/conda-forge/nco-feedstock">nco-4.6.1</a> Executables Anaconda-compatible. Maintained by Filipe Fernandes.</li>
 Thanks to Rich Signell, Filipe Fernandes (and others?) for developing and maintaining the NCO package for conda.
 </ul>
 
@@ -770,7 +770,7 @@ Thanks to Rich Signell, Filipe Fernandes (and others?) for developing and mainta
 <h3><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux</a></h3>
 <ul>
 <!--
-<li><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux-compatible Intel systems, prebuilt binary executable <a href="http://www.debian.org">deb</a>: <a href="http://packages.debian.org/testing/math/nco.html">nco-4.6.0</a></li>
+<li><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux-compatible Intel systems, prebuilt binary executable <a href="http://www.debian.org">deb</a>: <a href="http://packages.debian.org/testing/math/nco.html">nco-4.6.1</a></li>
 -->
 <a href="http://packages.debian.org/unstable/science/nco">Debian NCO</a> and 
 <a href="http://packages.ubuntu.com/natty/nco">Ubuntu NCO</a> homepages.
@@ -778,12 +778,12 @@ Thanks to Rich Signell, Filipe Fernandes (and others?) for developing and mainta
 NCO packages in the Debian/Ubuntu repositories (i.e., Sid and Raring) generally lag the packages distributed here by 6&ndash;12 months.
 <a name="beta"></a><a name="prerelease"> <!-- http://nco.sf.net#beta -->
 Newer (beta- or pre-release) packages are often available for intrepid Debian/Ubuntu users as described <a href="https://github.com/nco/nco/tree/master/doc/beta.txt">here</a>.
-<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_4.6.0-1_i386.deb</tt>&rsquo;):</dt>
-<li><a href="src/nco_4.6.0-1_amd64.deb">nco_4.6.0-1_amd64.deb</a> (<!--#fsize file="src/nco_4.6.0-1_amd64.deb"-->): Executables AMD64-compatible (last updated <!--#flastmod file="src/nco_4.6.0-1_amd64.deb"-->)</li>
-<li><a href="src/nco_4.6.0-1.dsc">nco_4.6.0-1.dsc</a> (<!--#fsize file="src/nco_4.6.0-1.dsc"-->): Description (last updated <!--#flastmod file="src/nco_4.6.0-1.dsc"-->)</li>
-<li><a href="src/nco_4.6.0-1_amd64.changes">nco_4.6.0-1_amd64.changes</a> (<!--#fsize file="src/nco_4.6.0-1_amd64.changes"-->): Changes since last deb package (last updated <!--#flastmod file="src/nco_4.6.0-1_amd64.changes"-->)</li>
-<li><a href="src/nco_4.6.0.orig.tar.gz">nco_4.6.0.orig.tar.gz</a> (<!--#fsize file="src/nco_4.6.0.orig.tar.gz"-->): Upstream Source (last updated <!--#flastmod file="src/nco_4.6.0.orig.tar.gz"-->)</li>
-<li><a href="src/nco_4.6.0-1.diff.gz">nco_4.6.0-1.diff.gz</a> (<!--#fsize file="src/nco_4.6.0-1_amd64.changes"-->): Debian patch to upstream source (last updated <!--#flastmod file="src/nco_4.6.0-1_amd64.changes"-->)</li>
+<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_4.6.1-1_i386.deb</tt>&rsquo;):</dt>
+<li><a href="src/nco_4.6.1-1_amd64.deb">nco_4.6.1-1_amd64.deb</a> (<!--#fsize file="src/nco_4.6.1-1_amd64.deb"-->): Executables AMD64-compatible (last updated <!--#flastmod file="src/nco_4.6.1-1_amd64.deb"-->)</li>
+<li><a href="src/nco_4.6.1-1.dsc">nco_4.6.1-1.dsc</a> (<!--#fsize file="src/nco_4.6.1-1.dsc"-->): Description (last updated <!--#flastmod file="src/nco_4.6.1-1.dsc"-->)</li>
+<li><a href="src/nco_4.6.1-1_amd64.changes">nco_4.6.1-1_amd64.changes</a> (<!--#fsize file="src/nco_4.6.1-1_amd64.changes"-->): Changes since last deb package (last updated <!--#flastmod file="src/nco_4.6.1-1_amd64.changes"-->)</li>
+<li><a href="src/nco_4.6.1.orig.tar.gz">nco_4.6.1.orig.tar.gz</a> (<!--#fsize file="src/nco_4.6.1.orig.tar.gz"-->): Upstream Source (last updated <!--#flastmod file="src/nco_4.6.1.orig.tar.gz"-->)</li>
+<li><a href="src/nco_4.6.1-1.diff.gz">nco_4.6.1-1.diff.gz</a> (<!--#fsize file="src/nco_4.6.1-1_amd64.changes"-->): Debian patch to upstream source (last updated <!--#flastmod file="src/nco_4.6.1-1_amd64.changes"-->)</li>
 Thanks to Daniel Baumann, Barry deFreese, Francesco Lovergine, 
 Brian Mays, Rorik Peterson, and Matej Vela for their help packaging
 NCO for Debian over the years. 
@@ -830,10 +830,10 @@ Thanks to Gavin Burris and Kyle Wilcox for documenting build procedures for RHEL
 <!-- 
 # Mac OS X 10.11 (El Capitan) systems (aerosol):
 /usr/bin/scp ~/nco/doc/index.shtml zender,nco@web.sf.net:/home/project-web/nco/htdocs
-cd ~/bin;tar cvzf ${DATA}/nco-4.6.0.macosx.10.11.tar.gz nc*;scp ${DATA}/nco-4.6.0.macosx.10.11.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src
+cd ~/bin;tar cvzf ${DATA}/nco-4.6.1.macosx.10.11.tar.gz nc*;scp ${DATA}/nco-4.6.1.macosx.10.11.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src
 -->
 The most up-to-date executables are probably those in the tarball below. Those unfamiliar with installing executables from tarballs may try the (older) <a href="http://en.wikipedia.org/wiki/Apple_Disk_Image">DMG</a> files (you may need to add <tt>/opt/local/bin</tt> to your executable path to access those operators).
-<li><a href="src/nco-4.6.0.macosx.10.11.tar.gz">nco-4.6.0.macosx.10.11.tar.gz</a> (<!--#fsize file="src/nco-4.6.0.macosx.10.11.tar.gz"-->): Executables MacOSX 10.11-compatible (last updated <!--#flastmod file="src/nco-4.6.0.macosx.10.11.tar.gz"-->). 
+<li><a href="src/nco-4.6.1.macosx.10.11.tar.gz">nco-4.6.1.macosx.10.11.tar.gz</a> (<!--#fsize file="src/nco-4.6.1.macosx.10.11.tar.gz"-->): Executables MacOSX 10.11-compatible (last updated <!--#flastmod file="src/nco-4.6.1.macosx.10.11.tar.gz"-->). 
 (NB: These executables require
   the <a href="http://trac.macosforge.org/projects/macports/wiki">MacPorts</a>
   <a href="#bld_macports">dependencies</a> for <a href="http://svn.macports.org/repository/macports/trunk/dports/science/nco">NCO</a>). Maintained by NCO Project.</li>
@@ -855,7 +855,7 @@ To build NCO from source yourself using MSVC or Qt, please see the <a href="nco_
 <ul>
 <!-- Copy files from http://glace.ess.uci.edu
 /usr/bin/scp /home/pvicente/nco/doc/index.shtml pvicente,nco@web.sf.net:/home/project-web/nco/htdocs
-/usr/bin/scp /home/pvicente/windows_setup/nco-4.6.0.windows.mvs.exe pvicente,nco@web.sf.net:/home/project-web/nco/htdocs/src
+/usr/bin/scp /home/pvicente/windows_setup/nco-4.6.1.windows.mvs.exe pvicente,nco@web.sf.net:/home/project-web/nco/htdocs/src
 /usr/bin/scp /home/pvicente/windows_setup/nco-4.4.5.win32.cygwin.tar.gz pvicente,nco@web.sf.net:/home/project-web/nco/htdocs/src
 -->
 <li><a href="src/nco-4.6.0.windows.mvs.exe">nco-4.6.0.windows.mvs.exe</a> (<!--#fsize file="src/nco-4.6.0.windows.mvs.exe"-->) : Windows Self-Extracting Installer (last updated <!--#flastmod file="src/nco-4.6.0.windows.mvs.exe"-->). Maintained by Pedro Vicente.</li>
@@ -1028,11 +1028,11 @@ site.</li>
 The simplest way to acquire the source is to download the compressed tarball:
 <ul>
 <li>
-<!-- scp ${DATA}/nco-4.6.0.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src -->
-<a href="https://github.com/nco/nco/archive/4.6.0.tar.gz">nco-4.6.0.tar.gz</a> 
-(<!--#fsize file="src/nco-4.6.0.tar.gz"--> compressed tar-file)<br>
-<!--#exec cmd="openssl dgst -md5 src/nco-4.6.0.tar.gz"--><br>
-<!--#exec cmd="openssl dgst -sha1 src/nco-4.6.0.tar.gz"--> 
+<!-- scp ${DATA}/nco-4.6.1.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src -->
+<a href="https://github.com/nco/nco/archive/4.6.1.tar.gz">nco-4.6.1.tar.gz</a> 
+(<!--#fsize file="src/nco-4.6.1.tar.gz"--> compressed tar-file)<br>
+<!--#exec cmd="openssl dgst -md5 src/nco-4.6.1.tar.gz"--><br>
+<!--#exec cmd="openssl dgst -sha1 src/nco-4.6.1.tar.gz"--> 
 </li>
 </ul>
 
@@ -1051,8 +1051,8 @@ You may retrieve any NCO distribution you wish from
 <a href="https://help.github.com">GitHub</a>. 
 Usually you wish to retrieve a recent tagged (i.e., released) version.
 This command retrieves the entire NCO repository (&lt; 20&nbsp;MB) and
-then checks out NCO version <tt>4.6.0</tt>:
-<p><tt>git clone https://github.com/nco/nco.git;cd nco;git checkout 4.6.0</tt></p>
+then checks out NCO version <tt>4.6.1</tt>:
+<p><tt>git clone https://github.com/nco/nco.git;cd nco;git checkout 4.6.1</tt></p>
 These commands retrieve the current (&ldquo;bleeding edge&rdquo;)
 development version of NCO into a local directory named <tt>nco</tt>:
 <p><tt>git clone https://github.com/nco/nco.git ~/nco</tt></p> or
@@ -1060,9 +1060,9 @@ development version of NCO into a local directory named <tt>nco</tt>:
 Track changes to the development version using
 <p><tt>cd nco;git pull</tt></p>
 One difference between running a "tagged" release 
-(e.g., <tt>4.6.0</tt>) and the development version is that the
+(e.g., <tt>4.6.1</tt>) and the development version is that the
 tagged release operators will print a valid version number (e.g.,
-<tt>4.6.0</tt>) when asked to do so with the <tt>-r</tt> flag
+<tt>4.6.1</tt>) when asked to do so with the <tt>-r</tt> flag
 (e.g., <tt>ncks -r</tt>).
 The development version simply places today's date in place of the
 version.
@@ -1209,9 +1209,9 @@ Users should instead first download and install the Antlr found <a href="http://
   then build the latest stable NCO and install it in,
   e.g., <tt>/usr/local</tt> with: 
 <tt>
-<dt>wget https://github.com/nco/nco/archive/4.6.0.tar.gz</dt>
-<dt>tar xvzf 4.6.0.tar.gz</dt>
-<dt>cd nco-4.6.0</dt>
+<dt>wget https://github.com/nco/nco/archive/4.6.1.tar.gz</dt>
+<dt>tar xvzf 4.6.1.tar.gz</dt>
+<dt>cd nco-4.6.1</dt>
 <dt>./configure --prefix=/usr/local</dt>
 <dt>make</dt>
 <dt>sudo make install</dt>
