@@ -118,11 +118,11 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.6.1-beta01
-@set doc-edition 4.6.1-beta01
+@set nco-edition 4.6.1
+@set doc-edition 4.6.1
 @set copyright-years 1995--2016
 @set update-year 2016
-@set update-date 3 August 2016
+@set update-date 6 August 2016
 @set update-month August 2016
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
